# notes

./: .gitignore  README.md
algorithm/: README.md  go.mod  main.go
cockroachdb/: README.md
cockroachdb/rust/: Cargo.toml  README.md
cockroachdb/rust/src/: main.rs
cockroachdb/rust/src/controllers/: test1_controller.rs
cockroachdb/rust/src/models/entities/: test1.rs
cockroachdb/rust/src/models/requests/: delete_request.rs  update_request.rs
cockroachdb/rust/src/models/responses/: create_response.rs  get_all_response.rs  get_by_id_response.rs  mod.rs  update_response.rs
cockroachdb/rust/src/repositories/: mod.rs  test1_repository.rs
cockroachdb/rust/src/routes/: route.rs
cockroachdb/rust/src/services/: test1_service.rs
cockroachdb/rust/src/states/: app_state.rs
cockroachdb/rust/src/utils/: cockroachdb_util.rs  mod.rs
frontend/: README.md
github/: README.md
image/: README.md
image/rust/: Cargo.toml  README.md
image/rust/src/controllers/: image_controller.rs  mod.rs
image/rust/src/models/requests/: image_request.rs  mod.rs
image/rust/src/routes/: route.rs
image/rust/src/services/: image_service.rs
image/rust/src/states/: app_state.rs
kafka/: README.md
kafka/rust/: Cargo.toml  README.md
kafka/rust/src/: main.rs
kafka/rust/src/consumers/: kafka_consumer.rs
kafka/rust/src/controllers/: kafka_controller.rs  mod.rs
kafka/rust/src/producers/: kafka_producer.rs
kafka/rust/src/routes/: route.rs
kafka/rust/src/services/: kafka_service.rs  mod.rs
kafka/rust/src/states/: app_state.rs
logger/: README.md
logger/rust/: Cargo.toml  README.md
logger/rust/src/: main.rs
logger/rust/src/controllers/: logger_controller.rs  mod.rs
logger/rust/src/initialize/: logger_initialize.rs  mod.rs
logger/rust/src/routes/: route.rs
logger/rust/src/services/: logger_service.rs  mod.rs
logger/rust/src/states/: app_state.rs
memcached/: README.md
microfrontend/: README.md
milliseconds/: README.md
mongodb/rust/: Cargo.toml  README.md
mongodb/rust/src/: main.rs
mongodb/rust/src/controllers/: test1_controller.rs
mongodb/rust/src/models/entities/: test1.rs
mongodb/rust/src/models/requests/: mod.rs  update_request.rs
mongodb/rust/src/models/responses/: create_response.rs  get_by_id_response.rs  response.rs  update_response.rs
mongodb/rust/src/repositories/: test1_repository.rs
mongodb/rust/src/routes/: route.rs
mongodb/rust/src/services/: test1_service.rs
mongodb/rust/src/states/: app_state.rs
mongodb/rust/src/utils/: mongo_util.rs
mysql/rust/: Cargo.toml  README.md
mysql/rust/databases/: mysql
mysql/rust/src/: main.rs
mysql/rust/src/controllers/: mod.rs  mysql_controller.rs
mysql/rust/src/models/: mod.rs
mysql/rust/src/models/entities/: test1.rs
mysql/rust/src/models/requests/: create_request.rs  delete_request.rs  update_request.rs
mysql/rust/src/models/responses/: create_response.rs  get_by_id_response.rs  http_response.rs  mod.rs  update_response.rs
mysql/rust/src/repositories/: mysql_repository.rs
mysql/rust/src/routes/: route.rs
mysql/rust/src/services/: mod.rs  mysql_service.rs
mysql/rust/src/states/: app_state.rs
mysql/rust/src/utils/: mysql_util.rs
panic/rust/: Cargo.toml  README.md
panic/rust/src/: main.rs
panic/rust/src/controllers/: mod.rs  panic_controller.rs
panic/rust/src/middlewares/: mod.rs
panic/rust/src/routes/: route.rs
panic/rust/src/services/: mod.rs  panic_service.rs
panic/rust/src/states/: app_state.rs
pdf/rust/: Cargo.toml  README.md
pdf/rust/src/: main.rs
pdf/rust/src/controllers/: mod.rs  pdf_controller.rs
pdf/rust/src/routes/: route.rs
pdf/rust/src/services/: mod.rs  pdf_service.rs
pdf/rust/src/states/: app_state.rs
rabbitmq/rust/: Cargo.toml  README.md
rabbitmq/rust/src/: main.rs
rabbitmq/rust/src/controllers/: mod.rs  rabbitmq_controller.rs
rabbitmq/rust/src/routes/: route.rs
rabbitmq/rust/src/services/: rabbitmq_service.rs
rabbitmq/rust/src/states/: app_state.rs
rabbitmq/rust/src/utils/: mod.rs  rabbitmq_util.rs
redis/rust/: Cargo.toml  README.md
redis/rust/src/: main.rs
redis/rust/src/controllers/: test1_controller.rs
redis/rust/src/models/entities/: test1.rs
redis/rust/src/models/requests/: create_request.rs  delete_request.rs  mod.rs
redis/rust/src/models/responses/: create_response.rs  get_response.rs  mod.rs  response.rs
redis/rust/src/routes/: route.rs
redis/rust/src/services/: test1_service.rs
redis/rust/src/states/: app_state.rs
redis/rust/src/utils/: redis_util.rs
request_response_log/rust/: Cargo.toml  README.md
request_response_log/rust/src/: main.rs
request_response_log/rust/src/middlewares/: mod.rs  model_middleware.rs  request_id_middleware.rs  request_response_log.rs
resumeable_upload/rust/: Cargo.toml  README.md
resumeable_upload/rust/src/: main.rs
resumeable_upload/rust/src/controllers/: file_controller.rs
resumeable_upload/rust/src/routes/: route.rs
resumeable_upload/rust/src/services/: file_service.rs
resumeable_upload/rust/src/states/: app_state.rs
server-sent-event/rust/: Cargo.toml  README.md
server-sent-event/rust/src/: main.rs
server-sent-event/rust/src/controllers/: mod.rs  server_sent_event_controller.rs
timeout/rust/: Cargo.toml  README.md
timeout/rust/src/: main.rs
timeout/rust/src/controllers/: mod.rs  timeout_controller.rs
timeout/rust/src/middlewares/: cancellation_token_middleware.rs  mod.rs
timeout/rust/src/repositories/: test1_repository.rs
timeout/rust/src/routes/: route.rs
timeout/rust/src/services/: test1_service.rs
timeout/rust/src/utils/: postgres_util.rs
validator/rust/: Cargo.toml  README.md
validator/rust/src/: main.rs
validator/rust/src/controllers/: mod.rs  test1_controller.rs
validator/rust/src/helpers/: mod.rs  validator_helper.rs
validator/rust/src/models/requests/: create_request.rs  mod.rs
validator/rust/src/models/responses/: create_response.rs  mod.rs  response.rs
validator/rust/src/routes/: route.rs
validator/rust/src/services/: mod.rs  test1_service.rs
validator/rust/src/states/: app_state.rs
(+1288 files in other folders)
