[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json", "macros", "ws"] }
chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["full"]}
