[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json", "macros", "ws"] }
chrono = "0.4.39"
http-body-util = "0.1.2"
hyper = "1.6.0"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"]}
uuid = { version = "1.13.1", features = ["v4", "v7"] }
