[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["json", "macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["multipart"] }
bytes = "1.10.1"
chrono = "0.4.40"
futures = "0.3.31"
infer = "0.19.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = "0.7.14"
tower = "0.5.2"
